--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,7 +82,8 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    enableHermes: false
+    enableHermes: false,
+    bundleInDebug: true
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -232,7 +233,9 @@ dependencies {
 
     implementation project(':react-native-permissions')
 
-    androidTestImplementation('com.wix:detox:+')
+    androidTestImplementation('com.wix:detox:+') { transitive = true }
+    androidTestImplementation 'junit:junit:4.12'
+    implementation "androidx.annotation:annotation:1.1.0"
 
 
     // debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
