--- a/.github/workflows/tool-cache.yaml
+++ b/.github/workflows/tool-cache.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 14.x
       - name: Setup Ruby 2.6
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.6'
       - name: Archive tool cache
