--- a/.github/workflows/tool-cache.yaml
+++ b/.github/workflows/tool-cache.yaml
@@ -26,9 +26,9 @@ jobs:
           ruby-version: '2.6'
       - name: Archive tool cache
         run: |
-          cd "${{ runner.tool_cache }}"
+          cd "${{ runner.tool_cache }}.old"
           tar -czf tool_cache.tar.gz *
       - name: Upload tool cache artifact
         uses: actions/upload-artifact@v2
         with:
-          path: ${{runner.tool_cache}}/tool_cache.tar.gz
+          path: ${{runner.tool_cache}}.old/tool_cache.tar.gz
