--- a/.github/workflows/detox.yml
+++ b/.github/workflows/detox.yml
@@ -96,7 +96,7 @@ jobs:
         run: |
           $ANDROID_HOME/tools/bin/sdkmanager --install emulator
           $ANDROID_HOME/tools/bin/sdkmanager "system-images;android-29;default;x86_64"
-          $ANDROID_HOME/tools/bin/avdmanager create avd -n Pixel_API_29_AOSP -d pixel --package "system-images;android-29;default;x86_64"
+          $ANDROID_HOME/tools/bin/avdmanager create avd -n Pixel_API_29_AOSP -d pixel --package "system-images;android-29;default;x86_64" --force
           $ANDROID_HOME/emulator/emulator -verbose -no-window -no-audio -gpu swiftshader_indirect @Pixel_API_29_AOSP &
 
       - name: Android Detox Build
