--- a/.github/workflows/detox.yml
+++ b/.github/workflows/detox.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Setup Ruby
         uses: actions/setup-ruby@v1
         env:
-          BUNDLE_GEMFILE: '${{ github.workspace }}/ios/Gemfile'
+          BUNDLE_GEMFILE: '${{ github.workspace }}/Gemfile'
         with:
           ruby-version: '2.6'
           bundler-cache: true
@@ -220,7 +220,7 @@ jobs:
       - name: Setup Ruby
         uses: actions/setup-ruby@v1
         env:
-          BUNDLE_GEMFILE: '${{ github.workspace }}/ios/Gemfile'
+          BUNDLE_GEMFILE: '${{ github.workspace }}/Gemfile'
         with:
           ruby-version: '2.6'
           bundler-cache: true
